# workbench

./: README.md  jup-ag-jupiter-cpi-swap-example.txt
anchor-send-with-fee/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
anchor-send-with-fee/migrations/: deploy.ts
anchor-send-with-fee/programs/workbench/: Cargo.toml
anchor-send-with-fee/programs/workbench/src/: error.rs  lib.rs
anchor-send-with-fee/programs/workbench/src/instructions/: initialize_settings.rs  mod.rs  transfer_with_fee.rs  withdraw.rs
anchor-send-with-fee/programs/workbench/src/state/: settings.rs
anchor-send-with-fee/programs/workbench/src/traits/: account_space.rs  mod.rs
anchor-send-with-fee/tests/: Cargo.toml
anchor-send-with-fee/tests/src/: integration.rs
send-with-swap/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
send-with-swap/app/: README.md
send-with-swap/app/cli-client/: .gitignore  Cargo.toml  README.md  example.env  justfile
send-with-swap/app/cli-client/src/: helpers.rs  main.rs  retryable_rpc.rs
send-with-swap/programs/send-with-swap/: Cargo.toml
send-with-swap/programs/send-with-swap/src/: constants.rs  lib.rs
send-with-swap/programs/send-with-swap/src/instructions/: init_treasury.rs  mod.rs  send.rs  update_treasury.rs
send-with-swap/programs/send-with-swap/src/state/: treasury.rs
send-with-swap/tests/: Cargo.toml
send-with-swap/tests/src/: test_initialize.rs
