[package]
name = "send-with-swap-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
borsh = "1.5.5"
clap = { version = "4.5.7", features = ["derive"] }
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client", branch = "2.1" }
sha2 = "0.10.8"
solana-client = "2.1.13"
solana-sdk = "2.1.13"
spl-associated-token-account = "2.3.0"
spl-token = "7.0.0"
tokio = { version = "1.35.0", features = ["full"] }
